--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1,12 +1,12 @@
-心療において，治療者は心身症やストレスからくる身体症状をもつ来談者の治療としてカウンセリングを行う．その中で，治療者は来談者の関心つまり「対人関係上の問題」に注意を向けて引き出すということがカウンセリングの基本である．
+心療において，治療者は心身症やストレスからくる身体症状をもつ来談者の治療としてカウンセリングを行う．その中で，治療者は来談者の関心つまり「対人関係上の問題」に注意を向けて引き出すということがカウンセリングの基本である\cite{zokad}．
 
 しかし，新人治療者は「対人関係上の問題」を，質問に対する回答として来談者から引き出すのに苦戦しているという問題がある．治療者の質問内容については，大きく2種類に分けられている．YesまたはNoで答える質問，または短い言葉だけで答えられるような質問は「閉じられた質問」または「閉ざされた質問」と呼ばれている．これに対し，来談者が5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている．熟練治療者によれば，来談者が何に問題意識を感じているかをカウンセリングで引き出すには，治療者は「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．しかし新人治療者は「閉じられた質問」の割合が多く，来談者が何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている．
 
 このように，新人治療者は「閉じられた質問」を多く用いる傾向にあるので，熟達治療者は，新人治療者が「開かれた質問」を自由に使えるように教育したいと考えている．「対人関係上の問題」に注意を向けて引き出すということがカウンセリングの基本であるので，このように治療者の関心で来談者を誘導してしまうことはよくないとされている．そのためのチェックが可能になるものが求められている．
 
-そこで，熟練治療者が新人治療者に指導する機会が設けられている．たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では，新人治療者に対してカウンセリングに関するアドバイスがなされている．具体的には，来談者と新人治療者とのカウンセリング内容を動画で撮影し，その動画書き起こされたカウンセリング内容のテキストデータを，熟練治療者らが読んで，議論をする，という流れである．そのため，熟練治療者達が会話の流れを文字で読むだけでは，カウンセリング内容の共有が十分に行えず，適切な方法で可視化されることが望まれていた．
+そこで，熟練治療者が新人治療者に指導する機会が設けられている．たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では，新人治療者に対してカウンセリングに関するアドバイスがなされている．具体的には，来談者と新人治療者とのカウンセリング内容を動画で撮影し，その動画書き起こされたカウンセリング内容のテキストデータを，熟練治療者らが読んで，議論をする，という流れである．そのため，熟練治療者達が会話の流れを文字で読むだけでは，カウンセリング内容の分析が十分に行えていなかった．新人治療者がどのような質問をして，それによって来談者からどのような回答を引き出したのか，適切な方法で可視化されることが望まれていた．
 
-そこで本研究では，来談者と新人治療者との会話の流れを，時間軸に沿って可視化するWebシステムを開発した．本提案システムは熟練治療者をユーザーとして想定した．熟練治療者から新人へのカウンセリング指導において重要なことは，新人治療者が来談者にどのような質問を投げかけるかによって，新人治療者が来談者からどのような「対人関係上の問題」を引き出したかである．それが一目見てすぐにわかるようになることが，このシステムによって期待されることである．
+そこで本研究では，来談者と新人治療者との会話の流れを，時間軸に沿って可視化するシステムを開発した．本提案システムは熟練治療者をユーザーとして想定した．熟練治療者から新人へのカウンセリング指導において重要なことは，新人治療者が来談者にどのような質問を投げかけるかによって，新人治療者が来談者からどのような「対人関係上の問題」を引き出したかである．それが一目見てすぐにわかるようになることが，このシステムによって期待されることである．%システムをWeb上に載せることによって，同じ会話データを持っているだけで遠隔のユーザーと同様の可視化を共有することが期待される．
 
 
 
