--- a/main.bib
+++ b/main.bib
@@ -68,9 +68,11 @@
 @ARTICLE{itoh2010interactive,
   title={An interactive visualization framework for time-series of web graphs in a 3D environment},
   author={I. Masahiko，T. Masashi，and K. Masaru},
-  journal={Information Visualisation (IV), 2010 14th International Conference, IEEE},
-  pages={54--60},
-  year={2010}
+  journal={Information Visualisation, International Conference, IEEE},
+  year={2010},
+        volume = "14",
+        number = "4",
+  pages={54--60}
 }
 
 
