--- a/chapter4.tex
+++ b/chapter4.tex
@@ -57,9 +57,8 @@
 
 前節では提案システムのユーザーである熟練治療者からのコメントをもとにした，提案システム要件抽出について説明した．本節では提案システムの設計と実装について説明する．本節ではその要件をみたした提案システムの設計と実装について説明する．
 
-まず本提案システム評価で使用する入力データについて述べる．本章の提案システムにおいて，カウンセリングを書き起こしたデータを全15個に分けて使用した．以降この15個のデータをそれぞれ，ソースa，ソースb，ソースc，ソースd，ソースe，ソースf，ソースg，ソースh，ソースi，ソースj，ソースk，ソースl，ソースm，ソースn，ソースoと呼ぶこととする．この本論文の実験で用いる対象データには「ヨーガ療法事例検討会」資料から引用したものである．
+まず本提案システム評価で使用する入力データについて述べる．本章の提案システムにおいて，カウンセリングを書き起こしたデータを全15個に分けて使用した．以降この15個のデータをそれぞれ，会話データ1，2，3，……，15と呼ぶこととする．この本論文の実験で用いる対象データには「ヨーガ療法事例検討会」資料から引用したものである．
 また，後述する初期グラフ描画がある程度有用なものかを示すために模擬会話データを1個用意した．
-以上のテキストデータをそれぞれ会話データに変換した．
 
 次に，本提案システムのアルゴリズムについて説明する．
 なお，本提案システムの開発言語はJavaScriptである．
@@ -112,7 +111,7 @@ UMLは，主にオブジェクト指向分析や設計のための，記法の統一がはかられた（Unified）
 
 
 
-質問内容は，前章の要件通り 5 種類に分類され，後述する縦棒アイコンの色の割り当ては次の通りである．濃いピンク色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃い青色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」，紫は「相槌」，オレンジは来談者の問題を治療者がどう「解釈」しているかの確認，黒は「無駄話」を表現している．第1章で述べた通り，来談者が何に問題意識を感じているかをカウンセリングで引き出すには，治療者は「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
+質問内容は，前章の要件通り 5 種類に分類され，後述する縦棒アイコンの色の割り当ては次の通りである．赤色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，青色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」，紫は「相槌」，オレンジは来談者の問題を治療者がどう「解釈」しているかの確認，黒は「無駄話」を表現している．第1章で述べた通り，来談者が何に問題意識を感じているかをカウンセリングで引き出すには，治療者は「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
 
 
 治療者の1発言についても，来談者の発言の1文ごとの分類と同様に，関連する単語をあらかじめ指定しておき，必要情報を\ref{fig:4_2}の発言データ分類サブシステムに引き渡し，発言データ分類の初期設定値を計算する．
@@ -132,10 +131,25 @@ UMLは，主にオブジェクト指向分析や設計のための，記法の統一がはかられた（Unified）
 まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相槌」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
 
 %\subsubsection{グラフ描画}
-以上がグラフ描画前のテキストデータ処理である．その後，治療者からの質問形態と， 「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化する．グラフ描画の際に，会話データを発言データ可視化サブシステムに受け渡す．このサブシステムでは，データ可視化ライブラリD3.js\cite{bostock2012d3}を使用した．
+以上がグラフ描画前のテキストデータ処理である．その後，治療者からの質問形態と， 「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化する．グラフ描画の際に，会話データを発言データ可視化サブシステムに受け渡す．このサブシステムでは，データ可視化ライブラリD3.js\cite{bostock2012d3}を使用した．模擬会話データを入力した際の出力結果を図\ref{fig:6_1}に示す．また模擬会話データの原文と，模擬会話データ時の初期自動分類結果を表\ref{table:book1}に示す．
+\begin{figure}
+   \begin{center}
+     \includegraphics[width=\linewidth]{6_1.png}
+   \end{center}
+   \caption{模擬会話データでのシステム出力結果}
+   \label{fig:6_1}
+ \end{figure}
+
+\begin{table}
+   \caption{模擬会話データでの初期表示用自動分類結果}
+   \label{table:book1}
+   \begin{center}
+     \includegraphics[width=\linewidth]{book1.png}
+   \end{center}
+ \end{table}
 
 \subsubsection{来談者発言ビュー}
-図\ref{fig:6_1}において，まず積み重ね折れ線グラフは来談者の1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・愛関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
+図\ref{fig:6_1}において，まず積み重ね折れ線グラフは来談者の1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて薄い水色は「仕事関係」，ピンク色は「愛（恋愛・愛関係）」，薄い緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
 横軸は時間軸を表現している．ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので，読み込ませたデータ内における来談者の発言量の累計の文字数を横軸，つまり時間軸とした．後述する治療者の質問を表現する縦棒はこの時間軸にそって出現する．治療者と来談者の発言の入れ替わりがわかりやすいように，積み重ね折れ線グラフが来談者の発言のグループ分布をちょうど表しているのは便宜上発言部分の中央部分になっている．
 縦軸は発言中の1文の数のうち，どのグループに何文入っているかという文の数を表している．
 
