--- a/chapter6.tex
+++ b/chapter6.tex
@@ -1,55 +1,75 @@
-本章では前章で述べた提案システムに対する評価について述べる．本システム評価では，前章で述べた16個の会話データをユーザー1名に渡し，そのユーザーがWeb上から本提案システムを利用した．
+本章では前章で述べた提案システムに対する評価として，提案システムからの出力結果の内容とそれに対する考察，ユーザーからのコメントとそれに対する考察，そして本提案システムの抱えている問題点について述べる．本システム評価では，前章で述べた16個の会話データをユーザー1名に渡し，そのユーザーがWeb上から本提案システムを利用した．第1章で述べた通り，熟練治療者から新人治療者へのカウンセリング指導において重要なことは，新人が来談者にどのような質問を投げかけるかによって，新人が来談者からどのような「対人関係上の問題」を引き出したかである．そういった会話の流れがすぐにわかるようになることが，本研究の目的である．
 
 
 
-\section{提案システムからの出力結果}
+\section{提案システムからの出力}
 
 
-本節では，ユーザーがWeb上で見た提案システムの出力結果について，特筆すべき点をまとめる．
+本節では，ユーザーがWeb上で見た提案システムの出力結果について，特筆すべき点をまとめ，それらについて考察を行う．
 
 
-まず模擬会話データを入力した際の出力結果を図\ref{fig:6_1}に示す．また模擬会話データの原文と，模擬会話データ時の初期自動分類結果を表\ref{table:book1}に示す．たとえば，図\ref{fig:6_1}の横軸30文字付近のピンクの縦棒の後のグラフの山は，この治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されている．
-\begin{figure}
-   \begin{center}
-     \includegraphics[width=\linewidth]{6_1.png}
-   \end{center}
-   \caption{提案システムの模擬会話データでの可視化結果}
-   \label{fig:6_1}
- \end{figure}
+まず模擬会話データを入力した際の出力結果である図\ref{fig:6_1}，および模擬会話データの原文と模擬会話データ時の初期自動分類結果である表\ref{table:book1}について考察する．
 
+たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているが，「何か」つまり英語の''something''の意味で「何」が使われているのでこの初期分類は正しくない．正しくは「閉じられた質問」である．この問題をシステム上で回避するには「何か」「誰か」など，疑問詞と「か」の組み合わせに関しては図\ref{fig:5_2}の「開かれた質問」の判断基準として考慮せず，発言内の他の箇所に疑問詞があるかないかによって「開かれた質問」かどうかを判断するようにすればいいと考える．
+
+
+この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
+
+
+次に，実際の会話データ15個を含めた全会話データをそれぞれ入力した際の出力について述べる．全会話データをそれぞれ入力した際のローカルでの動作において読み込みからグラフ描画までの所要時間は4秒から10秒の間であった．全16個の会話データをそれぞれ本システムに入力した際，形態素解析システムを用いて分析された来談者の発言の全ての文の数，単語数，文字数をそれぞれ
+\begin{eqnarray*}
+  && S_C，W_C，C_C，
+\end{eqnarray*}
+治療者の発言の全ての文の数，単語数，文字数をそれぞれ
+\begin{eqnarray*}
+  && S_T，W_T，C_T，
+\end{eqnarray*}
+とする．各会話データにおける
+\begin{eqnarray*}
+  && S_C，W_C，C_C，S_T，W_T，C_T，\frac{S_C}{S_T}，\frac{W_C}{W_T}，\frac{C_C}{C_T}
+\end{eqnarray*}
+の値を表\ref{table:book2}に示す．これに対する考察として，
 \begin{table}
-   \caption{模擬会話データでの初期表示用自動分類結果}
-   \label{table:book1}
-   \begin{center}
-     \includegraphics[width=\linewidth]{book1.png}
-   \end{center}
- \end{table}
-
-
-次に，全16個の会話データをそれぞれ本システムに入力した際，形態素解析システムを用いて分析された来談者と治療者それぞれの発言の全ての文の数，単語数，文字数，およびそれら3種類の値における来談者に対する治療者の値の比を表\ref{table:book2}に示す．また特筆すべき結果として，ソースnを入力した際の出力結果を図\ref{fig:6_2}に示す．特に縦棒通しの間隔が空いているところは
-\begin{table}
-   \caption{各会話データの全ての文の数と単語数と文字数}
+   \caption{治療者と来談者の発言の全ての文の数，単語数，文字数とその比}
    \label{table:book2}
    \begin{center}
      \includegraphics[width=\linewidth]{book2.png}
    \end{center}
  \end{table}
+\begin{eqnarray*}
+  && \frac{W_C}{W_T}，\frac{C_C}{C_T}
+\end{eqnarray*}
+の値が2をこえている会話データ5，8，14は，それぞれカウンセリング日程内でヨーガの瞑想前と瞑想後に会話データをわけたもののうち，ヨーガの瞑想前の会話データのグループであった．よってこの2種類の値は，治療者の発言量に比べて来談者の回答を多く引き出せたという指標にすることができると考える．
+
+次に特筆すべき結果として，会話データ1，14を入力した際のグラフ描画結果をそれぞれ図\ref{fig:0801}，図\ref{fig:6_2}に示す．
 \begin{figure}
-%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth]{0801.png}
+   \end{center}
+   \caption{会話データ1でのグラフ描画結果}
+   \label{fig:0801}
+ \end{figure}
+\begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth]{6_2.png}
    \end{center}
-   \caption{ソースn入力時の出力結果}
+   \caption{会話データ14でのグラフ描画結果}
    \label{fig:6_2}
-%\end{landscape}
  \end{figure}
+
+まず会話データ1を入力した際のグラフ描画結果である図\ref{fig:0801}から読み取れることを述べる．左側から順に見て中盤までは，回答として折れ線グラフの緑色，つまり「交友」に関する話題ばかりであった．そこから，治療者からのある発言を機に，患者からピンク，つまり「愛」に関する回答を得た．そしてその次の赤い縦棒，つまり「開かれた質問」によって，「愛」「交友」だけでなくグラフの薄い水色，つまり「仕事」に関する回答を得た．図\ref{fig:0801}から以上のような読み取りが可能であると考える．
+
+また，会話データ14を入力した際のグラフ描画結果である図\ref{fig:6_2}について
 \begin{itemize}
   \item （19発言目以降）開かれた質問→200文字程度，「愛」2文→相槌→1000文字程度，「愛」10文
   \item （57発言目以降）開かれた質問→100文字程度，「愛」6文→開かれた質問→700文字程度，「愛」9文
 \end{itemize}
-となっている．なお，前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から10秒の間であった．
+となっている通り，1回目の開かれた質問の直後ではなく，その直後の発言の後に相槌かもう１度開かれた質問を行うことによって，対人関係上の問題をより多く引き出せている事例が見受けられたと考える．
 
-最後に，上記16個の各会話データ入力時の初期自動分類成功率を表\ref{table:book3}に示す．以上の考察は次章で述べる．
+以上，図\ref{fig:0801}，図\ref{fig:6_2}のように，会話データを描画して，どのような質問からどのような回答が得られたかが，本システムで考察できると考える．実際には原文表示機能を用いて原文とグラフを照らしあわせながらの考察が可能である．
+
+
+最後に，上記16個の各会話データ入力時の初期分類の正答率を表\ref{table:book3}に示す．
 \begin{table}
    \caption{各会話データの初期自動分類成功率}
    \label{table:book3}
@@ -57,6 +77,7 @@
      \includegraphics[width=\linewidth]{book3.png}
    \end{center}
  \end{table}
+治療者に関する正答率90％，来談者に関する正答率92％ということで，割合的には大幅な修正は必要ないと考えるが，今後発言数の多い会話データを読み込んだ際には手動修正により時間がかかってしまいユーザーに負担になるのではないかと考える．
 
 
 
@@ -64,17 +85,68 @@
 \section{ユーザーのコメント}
 
 
-ユーザーから，本提案システムについてコメントを得た．
+ユーザーから，本提案システムについてコメントを得た．本節ではユーザーからのコメントとそれ対する本論文筆者の考察について述べる．
 
 まず，Web上から本提案システムが動作し，図\ref{fig:6_1}に示す画面が得られたというコメントを得た．
 新人治療者の発言を表す縦棒の間隔を等間隔にしたシステムバージョンもユーザーは見たが，それに比べ図\ref{fig:6_1}に示す通り縦棒同士の間隔がその間の来談者の発言の文字数に比例するグラフデザインの方が，「対人関係上の問題」がグラフからよりわかりやすいというコメントを得た．
 またユーザーはレイアウトに関して，ラジオボタンがグラフの上にくるレイアウトのシステムバージョンも見たが，配置は図\ref{fig:6_2}に示すものの方が見やすいというコメントを得た．
 
-新人治療者が愛・交友・仕事のそれぞれのグループに関して引き出したという可視化はできるが，自身の症状に関する記述は，愛・交友・仕事のどれにも当てはまらないことが多く，症状に囚われている来談者は自己のタスクが大半になるといえるため，第４のタスクとされる自己，第５のタスクとされるスピリチュアルの二つを追加すべきだというコメントを得た．描画時間に対する具体的なコメントは得ていない．
+本システムはWeb上で動作することをユーザーからのコメントで確認できたので，考察としては筆者とユーザーとのカウンセリング内容の共有は行えたと考える．しかし，複数の熟練治療者同士のカウンセリング内容の共有を行っていないので，熟練治療者達の間で，カウンセリング内容の共有が効果的に行えるようになるかは前章からは検証できない．
+
+
+縦棒同士の間隔が等間隔であるグラフデザインよりも，縦棒同士の間隔の来談者の発言の文字数に比例するグラフデザインの方が，「対人関係上の問題」がグラフからよりわかりやすいというコメントを得た．このコメントから，縦棒同士の間隔の来談者の発言の文字数に比例するグラフデザインは，新人治療者が来談者からどのような「対人関係上の問題」を引き出したかがひとめですぐにわかるようになるという本システムの目的に寄与していると考える．
+
+次に得たコメントは次のような内容である．新人治療者が愛・交友・仕事のそれぞれのグループに関して引き出したという可視化はできるが，自身の症状に関する記述は，愛・交友・仕事のどれにも当てはまらないことが多く，症状に囚われている来談者は自己のタスクが大半になるといえるため，第４のタスクとされる自己，第５のタスクとされるスピリチュアルの二つを追加すべきである．描画時間に対する具体的なコメントは得ていない．
+
+アドラー心理学における来談者が抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」は引き出せるが「自己」「スピリチュアル」も選択肢に入れてほしいというコメントを得た．これは，来談者自身の症状の話については「愛」「仕事」「交友」に分類されず，「自己」「スピリチュアル」に分類されることが多いからである．「愛」・「仕事」・「交友」といった「対人関係上の問題」が引き出されたかは本システムによってわかるが，「自己」・「スピリチュアル」といった「自己の問題」に関してはわからないと考える．
+
+また，描画所要時間に関するコメントは得られていない．今後描画所要時間について検証する必要があるが，コメントによる評価だけでなく，今後描画までの経過時間を出力する機能を搭載することで定量的な検証が行えると考える．
 
 特筆すべき問題点として，まず選択肢手動変更保存機能を求めるコメントを得た．その理由として，入力するテキストデータが長文である場合分類を手動修正する回数も多く，多忙な熟練治療者が長文テキストデータを一度に修正しきれないためにこの機能が求めているというコメントを得た．
 
-また配色の問題について，原文表示機能で治療者の実際の発言内容の色分けを示す隅付き括弧の判別がつかないというコメントを得た．ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由が，コメント内で挙げられた．
+本提案システムに対してユーザーが最も求めている機能として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存，または出力する機能が挙げられることがわかった．これは，入力するテキストデータが長文である場合分類を手動修正する回数も多く，多忙な熟練治療者が長文テキストデータを一度に修正しきれないためにこの機能が求めているというコメントを得た．これに対する解決策として，どの選択肢が選ばれているかを出力する機能や，Googleアカウントなどで入力データや選択肢データを管理する機能などが考える．
+
+配色の問題について，ページ右下側に表示される治療者の実際の発言内容を囲う隅付き括弧も色だけでは判別がつかないというコメントを得た．特に薄い色や青色が見えにくいという問題に対しては，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由が，コメント内で挙げられた．治療者から来談者への質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」など，何か文字やアイコンを表示する必要があると考える．
+
+\section{問題点}
+
+新人治療者を指導する目的で本システムを実用化するためには，まだ議論すべき点が残されていると考える．本論文内でまだ検証しておらず，今後検証していくべきだと考える課題について述べる．
+
+
+
+\subsubsection{他のグラフ描画との比較}
+そもそも，会話の流れの可視化に積み重ね折れ線グラフという描画方法が最も妥当であるか評価しきれていない．縦向きあるいは横向きの棒グラフが妥当なのか，縦幅をとるが累積分布グラフが妥当なのか検証する必要がある．
+来談者の話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，治療者の質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
+
+
+
+\subsubsection{軸の値の取り方}
+本提案システムでは，横軸は患者の全発言の文字数（縦棒同士の間隔は，患者の各発言の文字数に比例），縦軸は，患者の各発言内において，それぞれ「交友」「愛」「仕事」に属する文の数（単位：文）を表しているが，縦軸・横軸に関して他にどのような数値を用いればより適当な判断が可能か，吟味する必要があると考える．
+
+
+
+
+
+
+
+\subsubsection{来談者の発言分類項目の追加}
+アドラー心理学における来談者が抱える問題の関心事のグループ分けに関して，特に患者の症状に関しては「愛」「仕事」「交友」のどれにも属さず，第4，第5のグループである「自己」と「スピリチュアル」に属することが多いので，「自己」と「スピリチュアル」のグループを加える必要があると考える．
+
+
+\subsubsection{視認性の改善}
+ブルーライトカットのディスプレイなどを使用しているユーザーが色を見分けにくいなどの理由から，本提案システム全体の配色面に関してまだ改善の余地があると考える．治療者から来談者への質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要があると考える．また，縦棒の上に発言番号を振ることで，どの縦棒がどの治療者の発言か，よりわかりやすくする必要があると考える．
+
+
+\subsubsection{入力用フォーマット自動生成機能}
+本提案システムでは，カウンセリングを書き起こしたテキストデータを筆者が手動で指定のフォームの会話データにつくりなおしてから，本提案システムのユーザーである熟練治療者にその会話データを渡して本提案システムをお使いいただいていたが，ユーザー側で最初から最後まで簡単に可視化を行うためには，カウンセリングを書き起こしたテキストデータを自動で本システムの入力データフォーマットとなる会話データに変換する機能を搭載する必要もあると考える．
+
+
+\subsubsection{ズーム機能}
+本システムのユーザーの治療者に，入力する書き起こしテキストデータの文章量が多いと積み重ね折れ線グラフの縦棒が密集してしまうので，全体の積み重ね折れ線グラフから一部分を抜き出して描画するズーム機能を提案したところ，是非欲しいとコメントを得たので，搭載しようと考える．
+
+
+\subsubsection{視覚的表現やユーザーインタラクションの定量的評価}
+ユーザーから見た本提案システムの操作性について，まだ定量的な評価を行っていない．本システムのユーザーとして想定するより多くの熟練治療者治療者に使っていただき，定量的評価を行うことが必要であると考える．たとえば意味差別法（semantic differential scale method）\cite{attrakdiff}は，見やすい-見にくい，使いやすい-使いづらいなどの対立する形容詞の対に関して5段階あるいは7段階の尺度を用いて，商品やシステムの感情的なイメージを定量的に分析する方法である．
 
 
 
