--- a/chapter7.tex
+++ b/chapter7.tex
@@ -1,4 +1,6 @@
-本章では，前章で述べたシステム評価を元に，本提案システムに対する考察を述べる．第1章で述べた通り，熟練治療者から新人治療者へのカウンセリング指導において重要なことは，新人が来談者にどのような質問を投げかけるかによって，新人が来談者からどのような「対人関係上の問題」を引き出したかである．そういった会話の流れがすぐにわかるようになることが，本研究の目的である．
+本章では前章で述べた提案システムに対する評価について述べる．本システム評価では，前章で述べた16個の会話データをユーザー1名に渡し，そのユーザーがWeb上から本提案システムを利用した．第1章で述べた通り，熟練治療者から新人治療者へのカウンセリング指導において重要なことは，新人が来談者にどのような質問を投げかけるかによって，新人が来談者からどのような「対人関係上の問題」を引き出したかである．そういった会話の流れがすぐにわかるようになることが，本研究の目的である．
+
+%本章では，前章で述べたシステム評価を元に，本提案システムに対する考察を述べる．
 
 %2016年1月の「心の可視化研究会」では，可視化の専門家，心理学の専門家など12名の方に本システムのプロトタイプを見ていただき，アイデアに関して概ね良い評価を得た．本システムの目的は，熟練治療者から新人へのカウンセリング指導において，どのような質問を新人治療者が来談者に投げかけるかによって，新人治療者が来談者からどのような「対人関係上の問題」に関する回答を引き出せたかが，熟練治療者にとってすぐにわかるようになることであったが，これに関して根本的には達成したと考える．
 
@@ -9,15 +11,27 @@
 
 
 
-まず模擬会話データを入力した際の出力結果は図\ref{fig:6_1}の通りであった．この動作結果は作成者の意図した通りの動作であることを確認した．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているので正しい．この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
+まず模擬会話データを入力した際の出力結果は図\ref{fig:6_1}の通りであった．たとえば，図\ref{fig:6_1}横軸30文字付近のピンクの縦棒は「あぁ，そうですね．最近身の回りで何か変化はありましたか．」という治療者の発言であり，「何」という5W1Hを表す疑問詞が含まれているので縦棒がピンク色になっているが，「何か」つまり英語の''something''の意味で「何」が使われているのでこの初期分類は正しくない．正しくは「閉じられた質問」である．この問題をシステム上で回避するには「何か」「誰か」など，疑問詞と「か」の組み合わせに関しては図\ref{fig:5_2}の「開かれた質問」の判断基準として考慮せず，発言内の他の箇所に疑問詞があるかないかによって「開かれた質問」かどうかを判断するようにすればいいと考える．
+
+この後のグラフの山はこの治療者発言後の「んー，父の機嫌が最近悪くて困っているんです．母ともよく喧嘩しますし．妹の教育費のことでよく．」という来談者の発言を表す．第1文は「父」という単語よりも「悪い」という仕事に分類された単語に反応して第1文自体が「仕事」に分類されているので，ラジオボタンエリアでの修正が必要となる可能性がある．しかし，第2文，第3文はそれぞれ「母」「妹」という単語に反応して「愛」に分類されており，これは期待通りの初期分類動作である．
+
+次に表\ref{table:book2}について考察する．
+\begin{eqnarray*}
+  && \frac{W_C}{W_T}，\frac{C_C}{C_T}
+\end{eqnarray*}
+の値が2をこえている会話データ5，8，14は，それぞれカウンセリング日程内でヨーガの瞑想前と瞑想後に会話データをわけたもののうち，ヨーガの瞑想前の会話データのグループであった．よってこの2種類の値は，治療者の発言量に比べて来談者の回答を多く引き出せたという指標にすることができると考える．
 
 
-次に，ソースnを入力した際の出力結果は\ref{fig:6_2}の通りであった．
+次に，会話データ1を入力した際のグラフ描画結果である図\ref{fig:0801}から読み取れることを述べる．左側から順に見て中盤までは，回答として折れ線グラフの緑色，つまり「交友」に関する話題ばかりであった．そこから，治療者からのある発言を機に，患者からピンク，つまり「愛」に関する回答を得た．そしてその次の赤い縦棒，つまり「開かれた質問」によって，「愛」「交友」だけでなくグラフの薄い水色，つまり「仕事」に関する回答を得た．図\ref{fig:0801}から以上のような読み取りが可能であると考える．
+
+また，会話データ14を入力した際のグラフ描画結果である図\ref{fig:6_2}について
 \begin{itemize}
   \item （19発言目以降）開かれた質問→200文字程度，「愛」2文→相槌→1000文字程度，「愛」10文
   \item （57発言目以降）開かれた質問→100文字程度，「愛」6文→開かれた質問→700文字程度，「愛」9文
 \end{itemize}
-となっている通り，1回目の開かれた質問の直後ではなく，その直後の発言の後に相槌かもう１度開かれた質問を行うことによって，対人関係上の問題をより多く引き出せている事例が見受けられた．
+となっている通り，1回目の開かれた質問の直後ではなく，その直後の発言の後に相槌かもう１度開かれた質問を行うことによって，対人関係上の問題をより多く引き出せている事例が見受けられたと考える．
+
+以上，図\ref{fig:0801}，図\ref{fig:6_2}のように，会話データを描画して，どのような質問からどのような回答が得られたかが，本システムで考察できると考える．実際には原文表示機能を用いて原文とグラフを照らしあわせながらの考察が可能である．
 
 また，前節で述べた全データをそれぞれ入力した際のローカルでの動作において，読み込みからグラフ描画までの所要時間は4秒から6秒の間であった．なお，最長のテキストデータは約4300文字である．
 \begin{itemize}
