--- a/main.tex
+++ b/main.tex
@@ -28,8 +28,8 @@
 \input{chapter4.tex}
 \chapter{システム評価}
 \input{chapter6.tex}
-\chapter{考察}
-\input{chapter7.tex}
+%\chapter{考察}
+%\input{chapter7.tex}
 \chapter{結論と今後の課題}
 \input{chapter8.tex}
 
